# deep-learning

./: lecture.ipynb  pyproject.toml
ex1/: ex1.ipynb
ex2/: ex2.ipynb
ex3/: py-lab-03-questions.ipynb
ex4/: py-lab-04-question.ipynb
ex5/: py-lab-05-question.ipynb
ex6/: pylab-06-question.ipynb
ex7/: py-lab-07-questions.ipynb
ex8/: pylab-08-question.ipynb
ex9/: py-lab-09-questions.ipynb
scripts/: install_torch.py
