[project]
name = "deep-learning"
version = "0.1.0"
description = "deep learning module master informatics hhu"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "torch",
    "torchvision",
    "torchaudio",
    "matplotlib-inline (>=0.1.7,<0.2.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "h5py (>=3.15.1,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
